Se agregó album

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
     <section class="regalos">
 
     </section>
+    <section class="sarah1"></section>
+    <section class="sarah2"></section>
+    <section class="sarah3"></section>
+    <section class="sarah4"></section>
 
   </div>
   <script src="contador.js"></script>
