Se agregaron cambios a los botones e invitaciones individuales

--- a/2.html
+++ b/2.html
@@ -52,7 +52,7 @@
         <label>Teléfono<input type="tel" name="telefono" required /></label>
         <label>Número de invitados
           <select name="invitados">
-            <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option>
+            <option>1</option><option>2</option>
           </select>
         </label>
         <label>¿Asistiré?
